log/build_2024-11-09_21-08-28/turtlebot_controller/stderr.log
  File "/home/ste/my_ros2_ws/install/turtlebot_controller/lib/python3.10/site-packages/script_python/turtle_csv_handler.py", line 136
    file_name = f"{date_str}_{file_number}_{"back_home" if self.back_home else "to_goal"}robot_data.csv"
                                             ^^^^^^^^^
SyntaxError: f-string: expecting '}'

